# browser-agent

./: .dockerignore  .env.example  .gitignore  ANALYSIS.md  DESIGN.md  Dockerfile  README.md  UNSUPPORTED_SITES.md  analysis-cn.md  docker-compose.yml  peek_analyze.py  peek_fulltier_m3.py  peek_paired.py
backend/: .env.example  probe_unsupported.py  pyproject.toml
backend/app/: main.py  security.py
backend/app/agent/: act.py  agentic_executor.py  classify.py  executor.py  locate.py  models.py  perceive.py  planner.py  recover.py  verify.py
backend/app/browser/: provider.py
backend/app/obs/: tracing.py
backend/app/stream/: events.py  screenshots.py
backend/tests/: conftest.py  test_abstain_reason.py  test_agentic_executor.py  test_ambiguity_grounding.py  test_app_smoke.py  test_audit.py  test_auth.py  test_blocked.py  test_cdp_iframe.py  test_cdp_locate.py  test_cdp_provider.py  test_confirm_gate.py  test_engine_selector.py  test_eval_loader.py  test_eval_scoring.py  test_eval_verify.py  test_l2_fallback.py  test_loop_mock.py  test_model_routing.py  test_navigate_resolve.py  test_navigate_status.py  test_peek_plan.py  test_peek_replan.py  test_perceive.py  test_phase_events.py  test_plan_reasoning_history.py  test_planner_start_context.py  test_predict_then_verify.py  test_production_verify_wiring.py  test_recovery.py  test_redact.py  test_reground_progress.py  test_replan_preserves_goal.py  test_report_honesty.py  test_seed_books.py  test_seed_internet.py  test_self_healing.py  test_settle_loading.py  test_step_diagnostics.py  test_step_repair.py  (+1 more)
(+162 files in other folders)
