[project]
name = "browser-agent-backend"
version = "0.0.0"
description = "Browser-automation agent backend (M0 scaffold)"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi==0.118.0",
    "uvicorn[standard]==0.37.0",
    "sse-starlette==2.1.3",
    "playwright==1.55.0",
    "opentelemetry-sdk==1.29.0",
    "opentelemetry-api==1.29.0",
    "langfuse==2.60.9",
    "github-copilot-sdk==1.0.2",
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "httpx==0.28.1",
    "anyio==4.6.2.post1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
